--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,17 @@
     margin: 0;
     padding: 0;
 }
+
+
+section{
+    padding: 40px 0;
+}
+
+
+.container{
+    width: 920px;
+    margin: 0 auto;
+    border: 2px solid blue;
+    padding: 20px
+}
+
