--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,23 @@ section{
     padding: 20px
 }
 
+
+.row{
+    display: flex;
+    border: 1px solid green;
+}
+
+.col{
+    padding: 20px;
+    border: 1px solid yellow;
+    flex-grow: 1;
+}
+
+.col-2{
+    flex-basis: 60%;
+    background-color: rgba(30,144,255,255);
+}
+
+.col-1{
+    background-color: rgba(255,192,203,255);
+}
