--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,14 @@ nav{
 .logo-container .title-logo{
     width: 60px;
     border: 1px dotted black;
-
 }
 
 ul{
     display: flex;
     list-style: none;
-    grow: 1;
     border: 1px dotted black;
-
+    column-gap: 1rem;
+    flex-grow: 1;
 }
 
 
