--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 .logo-container{
     display: flex;
-    column-gap: 1rem;
+    width: 15%;
 }
 
 
@@ -21,6 +21,7 @@ nav{
     border: 1px dotted black;
     justify-content: space-between;
     background-color: rgba(218,165,32,255);
+
 }
 
 .logo-container .title-logo{
@@ -33,9 +34,23 @@ ul{
     list-style: none;
     border: 1px dotted black;
     column-gap: 1rem;
-    flex-grow: 1;
+    justify-content: center;
 }
 
+.link-container{
+    width: 70%;
+}
+
+.login-container{
+    width: 15%;
+    display: flex;
+}
+
+
+
+.title-login{
+    text-align: end;
+}
 
 
 
