--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,10 @@ header{
 }
 
 .col{
-    padding: 20px;
+    padding: 150px;
     border: 1px solid black;
     flex-grow: 1;
+    background-color: rgba(255,192,203,255);
 }
 
 .col-1{
@@ -104,6 +105,15 @@ header{
 
 .bg-pink{
     background-color: rgba(238,130,238,255);
+}
+
+.bg-green{
+    padding: 300px;
+    background-color: rgba(34,139,34,255);
+}
+
+..col{
+    padding: 50px 0;
 }
 
 
