--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header{
 }
 
 .col-1{
-    width: 61%;
+    flex-basis: 61%;
     background-color: rgba(30,144,255,255);
 }
 
@@ -112,7 +112,7 @@ header{
     background-color: rgba(34,139,34,255);
 }
 
-..col{
+.col{
     padding: 50px 0;
 }
 
@@ -122,8 +122,24 @@ header{
 }
 
 
+footer{
+    background-color: rgba(35,39,42,255);
+}
+
+.col-foot1{
+    flex-basis: 30%;
+    padding: 180px 0;
+    background-color: rgba(240,128,128,255);
+    border: 1px dashed black;
+}
 
 
+.col-foot{
+    flex-basis: 17.5%;
+    background-color: rgba(32,178,170,255);
+    border: 1px dashed white;
+
+}
 
 
 
